--- a/travelInfoPush/pom.xml
+++ b/travelInfoPush/pom.xml
@@ -20,16 +20,22 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.2.5</version>
 	</dependency>
+		-->
   	<dependency>
 	    <groupId>cn.edu.hfut.dmic.webcollector</groupId>
 	    <artifactId>WebCollector</artifactId>
 	    <version>1.42</version>
 	</dependency>
-	-->
+
 	<dependency>
 		<groupId>net.sourceforge.htmlunit</groupId>
 		<artifactId>htmlunit</artifactId>
 		<version>2.15</version>
+	</dependency>
+	<dependency>
+	  <groupId>jfreechart</groupId>
+	  <artifactId>jfreechart</artifactId>
+	  <version>1.0.0</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
