--- a/travelInfoPush/pom.xml
+++ b/travelInfoPush/pom.xml
@@ -33,15 +33,20 @@
 		<version>2.15</version>
 	</dependency>
 	<dependency>
-	  <groupId>jfreechart</groupId>
+	  <groupId>org.jfree</groupId>
 	  <artifactId>jfreechart</artifactId>
-	  <version>1.0.0</version>
+	  <version>1.0.17</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>xml-apis</groupId>
+	    <artifactId>xml-apis</artifactId>
+	    <version>1.4.01</version>
+	</dependency>
   </dependencies>
 </project>
